--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -2,17 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\TANGYI~1\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.454 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "倒排索引构建完成\n",
       "结果已写入输出文件\n",
-      "查询“走廊&建成”花费时间: 0.000015 秒\n",
-      "未找到该词\n",
+      "查询“走廊&建成”花费时间: 0.000028 秒\n",
+      "文档1共出现5次\n",
+      "查询“走廊”花费时间: 0.000008 秒\n",
+      "文档1共出现4次\n",
+      "文档4共出现2次\n",
+      "查询“走廊|建成”花费时间: 0.000028 秒\n",
+      "文档1共出现5次\n",
+      "文档4共出现2次\n",
+      "文档5共出现1次\n",
+      "查询“走廊&唐屹”花费时间: 0.000029 秒\n",
+      "文档1共出现4次\n",
+      "文档4共出现2次\n",
       "退出检索\n"
      ]
     }
